--- a/rastyajka/index.html
+++ b/rastyajka/index.html
@@ -97,6 +97,7 @@
         <!-- <a class="btn-3 btn" href="https://marapayment.accelsite.io/pay"></a> -->
     </section>
 
+				<!-- slaider2 -->
 		<section id="slider" class="slider1 container">
         <!-- <img class="title" src="images/slider-title.svg" alt="slider-title"> -->
         <div class="slick-slider">
@@ -130,7 +131,7 @@
         </div>
     </section>
 
-		    <!-- programma -->
+		    <!-- programma kursa -->
     <section class="programma">
         <img src="images/programma.jpg" alt="img">
         <a class="btn-3 btn" href="https://marapayment.accelsite.io/pay"></a>
@@ -142,7 +143,7 @@
         <!-- <a class="btn-3 btn" href="https://marapayment.accelsite.io/pay"></a> -->
     </section>
 
-			<!-- cost -->
+			<!-- price -->
     <section class="cost">
         <img src="images/cost.jpg" alt="img">
         <a class="btn-4 btn" href="https://marapayment.accelsite.io/pay"></a>
@@ -216,6 +217,7 @@
         </ul>
     </section>
     
+			<!-- footer with credits -->
     <footer class="container">
         <p style="font-family: HeadingNow-95;
         font-size: 28px;
